--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Odin Recipies</title>
     </head>
     
     <body>
-
+        <h1>Odin Recipies</h1>
     </body>
 </html>
