Edit Comments + Return option + img

--- a/recipies/lasagna.html
+++ b/recipies/lasagna.html
@@ -7,8 +7,10 @@
     </head>
 
     <body>
+        <!-- As as reference point, this Recipe was taken from this Webpage: https://www.allrecipes.com/recipe/16513/lisas-lasagne/ -->
+
         <h1>Lisa's Lasagne Recipe</h1>
-        <img src="../img/image(3)" alt="A Picture of a delishious lasagna on a plate.">
+        <img src="../img/lasagnaimg(3)" alt="A Picture of a delishious lasagna on a plate.">
         <h2>A tasty Lasagna</h2>
 
         <p>A colorful, tasty dish. Served with garlic bread, this vegetarian lasagne makes an excellent meal for guests.</p>
@@ -38,6 +40,7 @@
 
         <p>After collecting all the Ingredients, we can finally start to assemble the Lasagna!</p>
 
+        <!-- Trying out new things that I haven't learned yet. Practice makes perfect! -->
         <h3>Directions</h3>
         <ol>
             <li> Step
@@ -70,6 +73,9 @@
             </li>
         </ol>
         <p> I do hope that you were able to follow along! And I hope you are able to enjoy the lasagna!</p>
+
+        <!-- Ending Phrase sends the User back to the index.html of the Website -->
+        <p> Are you already done with this recipe? Or do you want to check out the other recipies? If so, simple <a href="../index.html">Click Me</a> to get back to the Main Page!</p>
 
     </body>
 </html>
