--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     
     <body>
         <h1>Odin Recipies</h1>
+        
+        <a href="./recipies/lasagna.html">Lisa's Lasagna Recipe</a>
+        <a href="./recipies/pizza.html">Pesto Pizza Recipe</a>
+        <a href="./recipies/cheesecake.html">Muddy Chocolate Cheese Cake Recipe</a>
     </body>
 </html>
