Edit Comment Link

--- a/recipies/pizza.html
+++ b/recipies/pizza.html
@@ -6,6 +6,7 @@
     </head>
     
     <body>
+        <!-- As a reference point, the recipe was taken from this webpage: https://www.allrecipes.com/recipe/21528/pesto-pizza/ -->
         <h1>Pesto Pizza Recipe</h1>
         <img src="../img/pestopizzaimg(1)" alt="A beautiful looking, delicious pizza with pesto on top.">
         <h2>A tasty Pesto Pizza.</h2>
